  under certain conditions. This resolves FS#45.
* Fixed problems with paths including non-English characters.
  wxFB can now be installed to such paths, as well as open/save projects,
  generate code, and import xrc files. This resolves FS#49.
* Now only allowing one choice for non_flexible_grow_mode and for 
  flexible_direction on wxFlexGridSizer. This resolves FS#56.

10-13-2006 Version 3.00.04
* Fixed visual editor for subpanels.
* Fixed circular subclassing. This resolves FS#32.
* Fixed Alt-Tab icon. This resolves FS#34.
^ Now limiting to a single instance of wxFB per project file. The resolves FS#31.

10-08-2006 Version 3.00.03 (Beta 1)
* Fixed wxWindow settings code generation.

10-07-2006 Version 3.00.02 (Beta 1)
* Fixed generation bugs in submenu and wxCheckList (now wxCheckListBox)
  These were caused by subclass in version 2.00.75. This closes FS#20.
* Changed title of save dialog box from "Open Project" to "Save Project"
  This closes FS#18.
* Fixed xrc generation of static bitmap using patch supplied by henrique.
  This closes FS#16
* Added subclassing on forms. This closes FS#21.
* Fixed C++ output of value property for wxGauge.
+ Added center property for wxDialog and wxFrame. This closes FS#17.
+ Individual directories for each plug-in.
+ Toolbar separators. This closes FS#11.
+ Possibility to group plugin components with toolbar separators.
^ Premake script for sdk projects.
^ Renamed contrib to wxAddition plug-in.
^ Palette now remembers tab order.
^ Major ripup/redesign of the plugin interface.
~ Plugin directory out of src.
~ wxAdditions plug-in to the wxAdditions repository.

09-13-2006 Version 2.00.75
+ Added subclass and user_headers properties. This closes FS#5.

09-07-2006 Version 2.00.74
* Fixed behaviour of wxSize and wxPoint properties when NumLock was
  on (and possibly others).

08-28-2006  Version 2.00.73
^ File size for wxAdditions in the wxFormBuilder installer.
* Fixed behaviour of wxSizer::Fit(). This fixes FS#9
