@@ -13,6 +13,8 @@ date Version 3.00.05
   generate code, and import xrc files. This resolves FS#49.
 * Now only allowing one choice for non_flexible_grow_mode and for 
   flexible_direction on wxFlexGridSizer. This resolves FS#56.
+* Now generating user_headers include statements above the generated
+  header include. This resolves FS#55.
 
 10-13-2006 Version 3.00.04
 * Fixed visual editor for subpanels.
